--- a/clusters/home/apps/mariadb-operator/release.yaml
+++ b/clusters/home/apps/mariadb-operator/release.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: mariadb-operator
-  namespace: default
+  namespace: mariadb-operator
 spec:
   interval: 5m
   install:
