--- a/clusters/home/configs/mariadb-operator/kustomization.yaml
+++ b/clusters/home/configs/mariadb-operator/kustomization.yaml
@@ -2,8 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: mariadb-operator
 resources:
-  - configmap.yaml
-  - mariadb-backup-pvc.yaml
-  - namespace.yaml
-  - release.yaml
-  - secret.yaml
+  - backup.yaml
+  - database.yaml
+  - grant.yaml
+  - mariadb.yaml
+  - user.yaml
+
+  
