--- a/clusters/home/apps/mariadb-operator/release.yaml
+++ b/clusters/home/apps/mariadb-operator/release.yaml
@@ -21,7 +21,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: mariadb-operator
-        namespace: default
+        namespace: flux-system
       interval:  1h0m0s
   values:
   
