--- a/clusters/home/manifests/configs.yaml
+++ b/clusters/home/manifests/configs.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: core
+  name: configs
   namespace: flux-system
 spec:
   interval: 1m0s
@@ -17,7 +17,7 @@ spec:
     - name: base
     - name: core
     - name: apps
-  path: ./clusters/home/core
+  path: ./clusters/home/configs
   sourceRef:
     kind: GitRepository
     name: flux-system
