--- a/clusters/home/apps/mariadb-operator/release.yaml
+++ b/clusters/home/apps/mariadb-operator/release.yaml
@@ -24,6 +24,12 @@ spec:
         namespace: flux-system
       interval:  1h0m0s
   values:
+    metrics:
+      enabled: false
+    webhook:
+      cert:
+        certManager:
+          enabled: false
   
 
     
