feat: Enable mariadb-operator in home apps and configs

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -12,6 +12,6 @@ resources:
   - speedtest-tracker
   - linkwarden
   - linkstack
-  # - mariadb-operator
+  - mariadb-operator
   # -  netdata
   # - superset
