--- a/clusters/home/configs/mariadb-operator/mariadb.yaml
+++ b/clusters/home/configs/mariadb-operator/mariadb.yaml
@@ -3,19 +3,33 @@ kind: MariaDB
 metadata:
   name: mariadb
 spec:
-  replicas: 3
-
-  replication:
+  galera:
     enabled: true
-
-  service:
-    type: LoadBalancer
-
-  primaryService:
-    type: LoadBalancer
-
-  secondaryService:
-    type: LoadBalancer
+    primary:
+      podIndex: 0
+      automaticFailover: true
+    sst: mariabackup
+    replicaThreads: 1
+    agent:
+      image:
+        repository: ghcr.io/mariadb-operator/agent
+        tag: "v0.0.2"
+        pullPolicy: IfNotPresent
+      port: 5555
+      kubernetesAuth:
+        enabled: true
+      gracefulShutdownTimeout: 5s
+    recovery:
+      enabled: true
+      clusterHealthyTimeout: 3m
+      clusterBootstrapTimeout: 10m
+      podRecoveryTimeout: 5m
+      podSyncTimeout: 5m
+    initContainer:
+      image:
+        repository: ghcr.io/mariadb-operator/init
+        tag: "v0.0.5"
+        pullPolicy: IfNotPresent
 
   volumeClaimTemplate:
     resources:
