--- a/clusters/home/configs/mariadb-operator/mariadb.yaml
+++ b/clusters/home/configs/mariadb-operator/mariadb.yaml
@@ -3,6 +3,14 @@ kind: MariaDB
 metadata:
   name: mariadb
 spec:
+  rootPasswordSecretKeyRef:
+    name: mariadb
+    key: password
+  image:  
+    repository: mariadb
+    tag: "11.0.3"
+    pullPolicy: IfNotPresent
+  port: 3306
   galera:
     enabled: true
     primary:
