--- a/clusters/home/apps/mariadb-operator/release.yaml
+++ b/clusters/home/apps/mariadb-operator/release.yaml
@@ -24,12 +24,19 @@ spec:
         namespace: flux-system
       interval:  1h0m0s
   values:
+    image:
+      repository: ghcr.io/mariadb-operator/mariadb-operator
+      pullPolicy: IfNotPresent
+      # tag: v0.0.20
     metrics:
       enabled: false
+      serviceMonitor:
+        enabled: false
     webhook:
-      cert:
-        certManager:
-          enabled: false
+      certificate:
+        certManager: false
+      serviceMonitor:
+        enabled: false
   
 
     
