--- a/clusters/home/configs/mariadb-operator/mariadb.yaml
+++ b/clusters/home/configs/mariadb-operator/mariadb.yaml
@@ -6,10 +6,7 @@ spec:
   rootPasswordSecretKeyRef:
     name: mariadb
     key: password
-  image:  
-    repository: mariadb
-    tag: "11.0.3"
-    pullPolicy: IfNotPresent
+  image:  ghcr.io/mariadb-operator/mariadb
   port: 3306
   galera:
     enabled: true
@@ -19,10 +16,7 @@ spec:
     sst: mariabackup
     replicaThreads: 1
     agent:
-      image:
-        repository: ghcr.io/mariadb-operator/agent
-        tag: "v0.0.2"
-        pullPolicy: IfNotPresent
+      image: ghcr.io/mariadb-operator/agent
       port: 5555
       kubernetesAuth:
         enabled: true
@@ -34,11 +28,7 @@ spec:
       podRecoveryTimeout: 5m
       podSyncTimeout: 5m
     initContainer:
-      image:
-        repository: ghcr.io/mariadb-operator/init
-        tag: "v0.0.5"
-        pullPolicy: IfNotPresent
-
+      image: ghcr.io/mariadb-operator/init
   volumeClaimTemplate:
     resources:
       requests:
