refactor(config): update mariadb.yamlThe `replica` field has been renamed to `replicas` for consistency

--- a/clusters/home/configs/mariadb-operator/mariadb.yaml
+++ b/clusters/home/configs/mariadb-operator/mariadb.yaml
@@ -3,13 +3,14 @@ kind: MariaDB
 metadata:
   name: mariadb
 spec:
+  image:  mariadb:lts
+  replicas: 3
+  replication:
+    enabled: true
   rootPasswordSecretKeyRef:
     name: mariadb
     key: password
-  image:  mariadb:lts
-  replica: 3
-  replication:
-    enabled: true
+
   service:
     type: LoadBalancer
 
