refactor: Update Longhorn release.yaml with new settings

--- a/clusters/home/core/longhorn/release.yaml
+++ b/clusters/home/core/longhorn/release.yaml
@@ -20,3 +20,5 @@ spec:
     defaultSettings:
       backupTarget: s3://velero-k3s-cluster-backups@ap-southeast-1/longhorn-backups
       backupTargetCredentialSecret: longhorn-aws-credentials
+      nodeDownPodDeletionPolicy: delete-both-statefulset-and-deployment-pod
+      guaranteedInstanceManagerCPU: 30
