--- a/clusters/home/configs/mariadb-operator/backup.yaml
+++ b/clusters/home/configs/mariadb-operator/backup.yaml
@@ -6,7 +6,7 @@ spec:
   mariaDbRef:
     name: mariadb
   schedule:
-    cron: "*/1 * * * *"
+    cron: "0 */6 * * *"
     suspend: false
   maxRetentionDays: 30
   storage:
