--- a/clusters/home/apps/postgresql/release.yaml
+++ b/clusters/home/apps/postgresql/release.yaml
@@ -21,7 +21,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: bitnami
-        namespace: default
+        namespace: flux-system
       interval: 1m
   values:
     global:
