refactor: simplify mariadb host in release.yaml

--- a/clusters/home/apps/wordpress-dev-portfolio/release.yaml
+++ b/clusters/home/apps/wordpress-dev-portfolio/release.yaml
@@ -64,7 +64,7 @@ spec:
     mariadb:
       enabled: false
     externalDatabase:
-      host: mariadb.mariadb-operator.svc.cluster.local
+      host: mariadb
       port: 3306
       user: root
       existingSecret: wordpress
