refactor: Update reference to mariadb-operator deployment

--- a/clusters/home/apps/wordpress-dev-portfolio/release.yaml
+++ b/clusters/home/apps/wordpress-dev-portfolio/release.yaml
@@ -64,7 +64,7 @@ spec:
     mariadb:
       enabled: false
     externalDatabase:
-      host: mariadb
+      host: mariadb # Reference mariadb-operator deployment
       port: 3306
       user: root
       existingSecret: wordpress
