style: enable wordpress-dev-portfolio in kustomization.yaml

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -13,6 +13,6 @@ resources:
   - linkwarden
   - linkstack
   - mariadb-operator
-  # - wordpress-dev-portfolio
+  - wordpress-dev-portfolio
   # -  netdata
   # - superset
