--- a/clusters/home/configs/mariadb-operator/mariadb.yaml
+++ b/clusters/home/configs/mariadb-operator/mariadb.yaml
@@ -7,6 +7,8 @@ spec:
   replicas: 3
   replication:
     enabled: true
+    primary:
+      automaticFailover: true
   rootPasswordSecretKeyRef:
     name: mariadb
     key: password
