style: remove wordpress-dev-portfolio from kustomization.yaml

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -13,7 +13,7 @@ resources:
   - linkwarden
   - linkstack
   - mariadb-operator
-  - wordpress-dev-portfolio
+  # - wordpress-dev-portfolio
   - busybox
   # -  netdata
   # - superset
