feat: enable debug mode for wordpress image

--- a/clusters/home/apps/wordpress-dev-portfolio/release.yaml
+++ b/clusters/home/apps/wordpress-dev-portfolio/release.yaml
@@ -24,6 +24,8 @@ spec:
         namespace: flux-system
       interval: 1m
   values:
+    image:
+      debug: true
     wordpressUsername: pacholoamit
     existingSecret: wordpress
     wordpressEmail: pacholoamit.tech@gmail.com
