--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -14,6 +14,6 @@ resources:
   - linkstack
   - mariadb-operator
   - wordpress-dev-portfolio
-  - busybox
+  # - busybox
   # -  netdata
   # - superset
