refactor: comment out unused topologySpreadConstraints

--- a/clusters/home/apps/wordpress-dev-portfolio/release.yaml
+++ b/clusters/home/apps/wordpress-dev-portfolio/release.yaml
@@ -38,14 +38,14 @@ spec:
     wordpressExtraConfigContent: |
       @ini_set( 'post_max_size', '999M');
     replicaCount: 1
-    topologySpreadConstraints:
-       - maxSkew: 1
-         topologyKey: kubernetes.io/hostname
-         whenUnsatisfiable: DoNotSchedule
-         labelSelector:
-           matchLabels:
-             app.kubernetes.io/name: wordpress
-             app.kubernetes.io/instance: wordpress
+    # topologySpreadConstraints:
+    #    - maxSkew: 1
+    #      topologyKey: kubernetes.io/hostname
+    #      whenUnsatisfiable: DoNotSchedule
+    #      labelSelector:
+    #        matchLabels:
+    #          app.kubernetes.io/name: wordpress
+    #          app.kubernetes.io/instance: wordpress
     ingress:
       enabled: true
       ingressClassName: nginx
