feat(deployment): increase replicas for linkstack, linkwarden, and speedtest-tracker, and update replicaCount for wordpress-dev-portfolio

--- a/clusters/home/apps/wordpress-dev-portfolio/release.yaml
+++ b/clusters/home/apps/wordpress-dev-portfolio/release.yaml
@@ -37,15 +37,15 @@ spec:
     wordpressBlogName: Pacholo Amit | Developer Portfolio
     wordpressExtraConfigContent: |
       @ini_set( 'post_max_size', '999M');
-    replicaCount: 0
-    # topologySpreadConstraints:
-    #    - maxSkew: 1
-    #      topologyKey: kubernetes.io/hostname
-    #      whenUnsatisfiable: DoNotSchedule
-    #      labelSelector:
-    #        matchLabels:
-    #          app.kubernetes.io/name: wordpress
-    #          app.kubernetes.io/instance: wordpress
+    replicaCount: 3
+    topologySpreadConstraints:
+       - maxSkew: 1
+         topologyKey: kubernetes.io/hostname
+         whenUnsatisfiable: DoNotSchedule
+         labelSelector:
+           matchLabels:
+             app.kubernetes.io/name: wordpress
+             app.kubernetes.io/instance: wordpress
     ingress:
       enabled: true
       ingressClassName: nginx
