--- a/clusters/home/apps/speedtest-tracker/secret.yaml
+++ b/clusters/home/apps/speedtest-tracker/secret.yaml
@@ -6,6 +6,7 @@ type: Opaque
 stringData:
     smtp-username: ENC[AES256_GCM,data:JTfNnTTIIJe+mvQaLhkNzmk=,iv:7aGV/yLUhCYN1p9avwNOWrw6cQ0Xd3tT4jdX5ECq1+U=,tag:CRjy7EdPXN9SXbkYAcLfFw==,type:str]
     smtp-password: ENC[AES256_GCM,data:MIQo7cnOeQEKMlI/qP2R34G/S/ZS1e33oAi1JkjT+0Rov4J8vBgz4nT2Tml/CbEwMs20p9w2q6NoD1NEMbPw6hTqPNxdVhnINqnyFOjWUVWM+0qrwOh/IJX0,iv:+WaaHQRFJJBF6x2JLn5/K3N56Rs804xJVQnGRkj3ook=,tag:4xPWSBWf9hguPSNQSXbicg==,type:str]
+    mariadb-root-password: ENC[AES256_GCM,data:g1LuXccmnZTXb/m+WU2Xvntg9bxnxFxpRyJun1/ZJyhJdbHTRclSBbUKwbeDsbpZ6g==,iv:h+TfWhYrQZx8xg+DL+1SIdoQc12Ffistk19Xn7P0/Cw=,tag:dnxcXYoPPqe8U/lst5a+2w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +22,8 @@ sops:
             NnFrR2RnQ1hYSHFxOHoyUGppSE53K1kKbQw8KLZevFYN2a3w7WPOhH+cTwM3eMv4
             AXo6ZgOdwtiBEo5ZH007+9+Sk9QKVnEC4uF6JlPKEuXt06tuCAAPHg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-29T22:39:08Z"
-    mac: ENC[AES256_GCM,data:4zvkx3/1PF8GL1LJ/eDCojNlWRp0kW/oesjpQ9mP0yHWDaqOBTbOilCNZfoRfYxq1LJmYeUrVq3M8gt9CQ4xN2CncR8D9fS0TV/evM8evdEVjinnnBa0JoptJOQtODhO1Lais4sYyPEKoVKCkDRKOU8maMJArXJbU2tqyurUx/c=,iv:33ERyv2Kh77iX2vpJTDUZtO65OAIKv0mrCdIACiSScY=,tag:s2DPKMGdjjiU4CiZrYN6xw==,type:str]
+    lastmodified: "2023-12-28T16:09:00Z"
+    mac: ENC[AES256_GCM,data:O1yCLXXKgH19l2eZvR7XYbwjbNMvE+9a6wBpI+I7TBNFvwJDpnHpW9vrnJRSiBbq9dyS/aJ/q/U1jCyj++fkDKSjVRI7puHOXFjnu8ryIuIck5XsqBbYkCTom7Lc7UkL1K7Wqt8/CcPt+DKFVgGkpPxHUiKkC7mmVW38ZGLJUbw=,iv:Y1OljRuWaYSzlH1MycB1PYibmfVg/ajTwHBN0XHP4Zw=,tag:Dzwei/x0AqvCju54v2EpIA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
