--- a/clusters/home/base/rook-operator/kustomization.yaml
+++ b/clusters/home/base/rook-operator/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - snapshot-controller
-  - rook-operator
+  - namespace.yaml
+  - release.yaml
+  - secret.yaml
