feat: enable ingress and add annotations for Rook storage orchestration

--- a/clusters/home/core/rook-cluster/release.yaml
+++ b/clusters/home/core/rook-cluster/release.yaml
@@ -24,4 +24,18 @@ spec:
         namespace: flux-system
       interval: 1m
   values:
+    ingress:
+      enabled: true
+      ingressClassName: nginx
+      host:
+        name: rook.pacholoamit.com
+        path: /
+      annotations:
+        nginx.ingress.kubernetes.io/proxy-body-size: 10000m
+        gethomepage.dev/enabled: "true"
+        gethomepage.dev/description: Cloud native storage orchestrator
+        gethomepage.dev/group: Infrastructure
+        gethomepage.dev/icon: rook.png
+        gethomepage.dev/name: Rook
+
   
