--- a/clusters/home/base/kustomization.yaml
+++ b/clusters/home/base/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - snapshot-controller
-  - rook-operator
+  # - rook-operator
