fix: Enable rook-operator and set version to "0.x.x" in release.yaml

--- a/clusters/home/core/rook-cluster/release.yaml
+++ b/clusters/home/core/rook-cluster/release.yaml
@@ -17,7 +17,7 @@ spec:
   chart:
     spec:
       chart: rook-ceph-cluster
-      # version: "0.x.x"
+      version: "0.x.x"
       sourceRef:
         kind: HelmRepository
         name: rook
