feat(clusters): add rook-cluster resource

--- a/clusters/home/core/kustomization.yaml
+++ b/clusters/home/core/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
   - kured # Restart kubernetes nodes
   # - reloader # Reloads config maps
   - node-problem-detector #   Detects if a node has been affected by an issue such as faulty hardware or kernel deadlocks, preventing scheduling.
-  # - rook-cluster
+  - rook-cluster
   # - system-upgrade
