refactor: Disable cephBlockPools' storageClass in release.yaml file

--- a/clusters/home/core/rook-cluster/release.yaml
+++ b/clusters/home/core/rook-cluster/release.yaml
@@ -27,8 +27,7 @@ spec:
     cephBlockPools:
       - name: ceph-blockpool
         storageClass:
-          enabled: true
-          isDefault: false
+          enabled: false
     cephFileSystems:
       - name: ceph-filesystem
         storageClass:
