style: Remove unnecessary line in release.yaml

--- a/clusters/home/core/rook-cluster/release.yaml
+++ b/clusters/home/core/rook-cluster/release.yaml
@@ -28,6 +28,7 @@ spec:
       - name: ceph-blockpool
         storageClass:
           enabled: false
+          isDefault: false
     cephFileSystems:
       - name: ceph-filesystem
         storageClass:
