--- a/clusters/home/apps/cloudflare/deployment.yaml
+++ b/clusters/home/apps/cloudflare/deployment.yaml
@@ -31,7 +31,7 @@ spec:
               topologyKey: "kubernetes.io/hostname"
       containers:
         - name: cloudflared
-          image: cloudflare/cloudflared
+          image: cloudflare/cloudflared:2023.10.0
           args:
             - tunnel
             - --config
