fix(deployment.yaml): Add imagePullPolicy to cloudflared container

--- a/clusters/home/apps/cloudflare/deployment.yaml
+++ b/clusters/home/apps/cloudflare/deployment.yaml
@@ -32,6 +32,7 @@ spec:
       containers:
         - name: cloudflared
           image: cloudflare/cloudflared:2023.10.0
+          imagePullPolicy: IfNotPresent
           args:
             - tunnel
             - --config
