refactor: Remove eraser release and update rancher release

--- a/clusters/home/helm/kustomization.yaml
+++ b/clusters/home/helm/kustomization.yaml
@@ -12,7 +12,6 @@ resources:
   - piraeus
   - vmware-tanzu
   - kube-reboot
-  - eraser
   - stakater
   - deliveryhero
   - superset
@@ -20,3 +19,4 @@ resources:
   - botkube
   - mariadb-operator
   - rook
+  - rancher
