--- a/clusters/home/helm/rancher/repository.yaml
+++ b/clusters/home/helm/rancher/repository.yaml
@@ -1,8 +1,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: eraser
+  name: rancher
   namespace: flux-system
 spec:
   interval: 30m
-  url: https://eraser-dev.github.io/eraser/charts
+  url: https://releases.rancher.com/server-charts/latest
