--- a/clusters/home/apps/wg-easy/service.yaml
+++ b/clusters/home/apps/wg-easy/service.yaml
@@ -26,3 +26,23 @@ spec:
       port: 51821
       targetPort: 51821
       protocol: TCP
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: wg-easy
+  labels:
+    name: wg-easy
+spec:
+  rules:
+  - host: vpn.pacholoamit.com
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: wg-easy
+            port: 
+              number: 51821
