refactor: update secret.yaml format

--- a/clusters/home/apps/wg-easy/secret.yaml
+++ b/clusters/home/apps/wg-easy/secret.yaml
@@ -1,7 +1,27 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: wg-easy
+    name: wg-easy
 type: Opaque
-data:
-  password: zM9BeF4RiYy8HHc2JT7u9CuR2abNBB6PKBj8mRrHAd4yNnnU5
+stringData:
+    password: ENC[AES256_GCM,data:5bIGHTJTCSIN/+Kh4aYAVepK0tt/WZZTolAWJuB2da7J0cxS5XRWGWtGaSPxswf4oQ==,iv:cufwbe2t4KKByOiEdoIk7st/fcWfDggPpLfzKfrBwxM=,tag:yRtHTXy81og8/O+eGEJfHQ==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age19hfjt8tc0etz2swhums26jrsu8avaslpawkvrjcxj4tr0kwy6a2s4td64z
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyN0tjVEJvdXFibnZ3VjNE
+            aktMK0N3QWFUMzU5Um9zOUNVclJ1Z3NpYTIwCjQ2WDhvUnZTelpobVlIRGJpemVW
+            aGFYQnNVV3dkKzR1TC9rMDIwSTNGbDQKLS0tIHIzdnpvaVpSQnQzRHRXNWhuQnBm
+            NmhWa0U4QVllWVhWRE5SWGFJeFFFK00Ka5NtbGDL4ysodUvmDBG6JkNYoqWev9KA
+            d4XpfVaFHC4JAAqQ/9TjggvEMr/yAosmOUIk0Lbjdo66hXjmzTR4iw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2023-12-30T22:29:15Z"
+    mac: ENC[AES256_GCM,data:SCbr4d2F66Wy1rBbjPVDeEy+5Zdv25Al9T53h6olYh+A47H8sEgoMOWTs/BlRw4zvyH6/hvXJIwl0xQKF+pDAyBOyaBorKB+wfOmxn9Bu5GTLK7EQzUHCnf1MMsvf5UqmaJTR6aGeQRyvHY0PQ814/zDZIuqp51HMQlOL+o550A=,iv:lxUbRKMjlEjvZJh4ZAtw0ZKgFKTWJk2P/TyUNwryBgM=,tag:ot7VPNkuZclH2rYCGgeJ6A==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.1
