--- a/clusters/home/apps/wg-easy/service.yaml
+++ b/clusters/home/apps/wg-easy/service.yaml
@@ -34,6 +34,15 @@ metadata:
   name: wg-easy
   labels:
     name: wg-easy
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/description: Wireguard VPN & Dashboard
+    gethomepage.dev/group: Apps/Services
+    gethomepage.dev/icon: wireguard
+    gethomepage.dev/name: Wireguard
+    gethomepage.dev/pod-selector: app=wg-easy
+    gethomepage.dev/weight: "1"
 spec:
   rules:
   - host: vpn.pacholoamit.com
