style: Add imagePullPolicy to deployment.yaml

--- a/clusters/home/apps/wg-easy/deployment.yaml
+++ b/clusters/home/apps/wg-easy/deployment.yaml
@@ -37,6 +37,7 @@ spec:
       containers:
         - name: wg-easy
           image: weejewel/wg-easy
+          imagePullPolicy: IfNotPresent
           securityContext:
             privileged: true
             capabilities:
