fix: Correct label selector in deployment.yaml

--- a/clusters/home/apps/wg-easy/deployment.yaml
+++ b/clusters/home/apps/wg-easy/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         whenUnsatisfiable: DoNotSchedule
         labelSelector:
           matchLabels:
-            app: linkstack
+            app: wg-easy
       restartPolicy: Always
       initContainers:
         - name: init
