style: Remove comment and add wg-easy to resources

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -13,7 +13,7 @@ resources:
   - linkstack
   - mariadb-operator
   - wordpress-dev-portfolio
-  # - wg-easy
+  - wg-easy
   # - busybox
   # -  netdata
   # - superset
