--- a/clusters/home/apps/wg-easy/deployment.yaml
+++ b/clusters/home/apps/wg-easy/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: wg-easy
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: wg-easy
@@ -36,7 +36,7 @@ spec:
                 - NET_ADMIN
       containers:
         - name: wg-easy
-          image: weejewel/wg-easy
+          image: ghcr.io/wg-easy/wg-easy
           imagePullPolicy: IfNotPresent
           securityContext:
             privileged: true
