style: Updated formatting of UDP port mapping in release.yaml

--- a/clusters/home/core/ingress-nginx/release.yaml
+++ b/clusters/home/core/ingress-nginx/release.yaml
@@ -18,4 +18,4 @@ spec:
     admissionWebhooks:
       enabled: false
     udp:
-      51820: "default/wg-easy:51820" # References wg-easy UDP service in ./apps/wg-easy/service.yaml
+      "51820": "default/wg-easy:51820" # References wg-easy UDP service in ./apps/wg-easy/service.yaml
