fix(deployment.yaml): Set WG_PORT value to "80"

--- a/clusters/home/apps/wg-easy/deployment.yaml
+++ b/clusters/home/apps/wg-easy/deployment.yaml
@@ -59,7 +59,7 @@ spec:
             - name: WG_HOST
               value: "wg.pacholoamit.com"
             - name: "WG_PORT"
-              value: null
+              value: "80"
             - name: WG_DEFAULT_DNS
               value: "1.1.1.1"
           resources:
