style: remove commented out plane resource

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -13,7 +13,7 @@ resources:
   - linkstack
   - mariadb-operator
   - wordpress-dev-portfolio
-  - plane
+  # - plane
   # - wg-easy
   # - busybox
   # -  netdata
