chore(clusters/home): remove speedtest-tracker from kustomization.yaml

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - cloudflare
   - weaveworks-dashboard
   - descheduler
-  - speedtest-tracker
+  # - speedtest-tracker
   - linkwarden
   - linkstack
   - mariadb-operator
