--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -1,18 +1,18 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - postgresql # WARNING: Removing this will also remove the volume
+  # - postgresql # WARNING: Removing this will also remove the volume
   - homepage
-  - n8n
-  - vaultwarden
-  - cloudflare
+  # - n8n
+  # - vaultwarden
+  # - cloudflare
   - weaveworks-dashboard
-  - descheduler
+  # - descheduler
   # - speedtest-tracker
-  - linkwarden
-  - linkstack
+  # - linkwarden
+  # - linkstack
   - mariadb-operator
-  - wordpress-dev-portfolio
+  # - wordpress-dev-portfolio
   # - plane
   # - wg-easy
   # - busybox
