--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -2,16 +2,16 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # - postgresql # WARNING: Removing this will also remove the volume
-  - homepage
+  # - homepage
   # - n8n
   # - vaultwarden
   # - cloudflare
-  - weaveworks-dashboard
+  # - weaveworks-dashboard
   # - descheduler
   # - speedtest-tracker
   # - linkwarden
   # - linkstack
-  - mariadb-operator
+  # - mariadb-operator
   # - wordpress-dev-portfolio
   # - plane
   # - wg-easy
