--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -1,18 +1,18 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - postgresql # WARNING: Removing this will also remove the volume
-  # - homepage
-  # - n8n
-  # - vaultwarden
+  - postgresql # WARNING: Removing this will also remove the volume
+  - homepage
+  - n8n
+  - vaultwarden
   - cloudflare
-  # - weaveworks-dashboard
+  - weaveworks-dashboard
   # - descheduler
-  # - speedtest-tracker
-  # - linkwarden
-  # - linkstack
-  # - mariadb-operator
-  # - wordpress-dev-portfolio
+  - speedtest-tracker
+  - linkwarden
+  - linkstack
+  - mariadb-operator
+  - wordpress-dev-portfolio
   # - plane
   # - wg-easy
   # - busybox
