fix: Update repository URL format

--- a/clusters/home/helm/open-8gears/repository.yaml
+++ b/clusters/home/helm/open-8gears/repository.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: default
 spec:
   interval: 30m
-  url: https://8gears.container-registry.com/chartrepo/library/n8n
+  url: oci://8gears.container-registry.com/library/n8n
