fix: Update Helm repository namespace to flux-system

--- a/clusters/home/apps/n8n/release.yaml
+++ b/clusters/home/apps/n8n/release.yaml
@@ -21,7 +21,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: open-8gears
-        namespace: default
+        namespace: flux-system
       interval: 1m
   values:
     image:
