--- a/clusters/home/helm/open-8gears/repository.yaml
+++ b/clusters/home/helm/open-8gears/repository.yaml
@@ -2,7 +2,8 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: open-8gears
-  namespace: default
+  namespace: flux-system
 spec:
   interval: 30m
+  type: oci
   url: oci://8gears.container-registry.com/library/n8n
