fix: Update OCI repository URL

--- a/clusters/home/helm/open-8gears/repository.yaml
+++ b/clusters/home/helm/open-8gears/repository.yaml
@@ -6,4 +6,4 @@ metadata:
 spec:
   interval: 30m
   type: oci
-  url: oci://8gears.container-registry.com/library/n8n
+  url: oci://8gears.container-registry.com/library/
