--- a/clusters/home/core/kustomization.yaml
+++ b/clusters/home/core/kustomization.yaml
@@ -3,10 +3,10 @@ kind: Kustomization
 resources:
   - ingress-nginx
   - longhorn
-  # - velero
+  - system-upgrade  
   - kured # Restart kubernetes nodes
   - rancher
   - node-problem-detector #   Detects if a node has been affected by an issue such as faulty hardware or kernel deadlocks, preventing scheduling.
   # - reloader # Reloads config maps
   # - rook-cluster
-  # - system-upgrade
+  # - velero
