refactor(system-upgrade): remove system upgrade controller

--- a/clusters/home/core/kustomization.yaml
+++ b/clusters/home/core/kustomization.yaml
@@ -3,7 +3,8 @@ kind: Kustomization
 resources:
   - ingress-nginx
   - longhorn
-  - system-upgrade  
+  - node-problem-detector #   Detects if a node has been affected by an issue such as faulty hardware or kernel deadlocks, preventing scheduling.  
   - kured # Restart kubernetes nodes
+  # - system-upgrade  # Enable for upgrades
   # - rancher # Disabled to to minimum version requirements
-  - node-problem-detector #   Detects if a node has been affected by an issue such as faulty hardware or kernel deadlocks, preventing scheduling.
+  
