--- a/clusters/home/apps/freshrss/ingress.yaml
+++ b/clusters/home/apps/freshrss/ingress.yaml
@@ -1,3 +1,16 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: freshrss
+spec:
+  selector:
+    app: freshrss
+  ports:
+  - port: 80
+    targetPort: 80
+
+---
+
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
