--- a/clusters/home/apps/freshrss/ingress.yaml
+++ b/clusters/home/apps/freshrss/ingress.yaml
@@ -16,6 +16,7 @@ kind: Ingress
 metadata:
   name: freshrss
   annotations:
+      kubernetes.io/ingress.class: nginx
       gethomepage.dev/enabled: "true"
       gethomepage.dev/description: RSS Reader
       gethomepage.dev/group: Apps/Services
