--- a/clusters/home/apps/gatus/release.yaml
+++ b/clusters/home/apps/gatus/release.yaml
@@ -34,6 +34,12 @@ spec:
       enabled: true
       annotations:
         kubernetes.io/ingress.class: "nginx"
+        gethomepage.dev/enabled: "true"
+        gethomepage.dev/description: Uptime monitoring
+        gethomepage.dev/group: Infrastructure
+        gethomepage.dev/icon: gatus
+        gethomepage.dev/name: Gatus
+        gethomepage.dev/weight: "1"
       hosts:
         - uptime.pacholoamit.com
     persistence:
