--- a/clusters/home/apps/gatus/release.yaml
+++ b/clusters/home/apps/gatus/release.yaml
@@ -40,6 +40,8 @@ spec:
         gethomepage.dev/icon: gatus
         gethomepage.dev/name: Gatus
         gethomepage.dev/weight: "1"
+        gethomepage.dev/widget.type: gatus
+        gethomepage.dev/widget.url: https://uptime.pacholoamit.com
       hosts:
         - uptime.pacholoamit.com
     persistence:
